--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Buffon's Needle</title>
-</head>
-<body onload="buffon = new Buffon();">
-  <canvas id="Canvas" width="700" height="700">
-			This text is displayed if your browser does not support HTML5 Canvas.
-		</canvas>
-  
-  <!-- Scripts -->
-  <script src="index.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<title>Buffon's Needle</title>
+		<script src="index.js"></script>
+	</head>
+	<body onload="buffon = new Buffon();">
+  		<canvas id="Canvas" width="700" height="700">This text is displayed if your browser does not support HTML5 Canvas.</canvas>
+	</body>
 </html>
