--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 		<script src="index.js"></script>
 	</head>
 	<body onload="buffon = new Buffon();">
-  		<canvas id="Canvas">This text is displayed if your browser does not support HTML5 Canvas.</canvas>
+  		<canvas id="Canvas" width="100%" height="100%">This text is displayed if your browser does not support HTML5 Canvas.</canvas>
 	</body>
 </html>
