--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Buffon's Needle</title>
 		<script src="index.js"></script>
 	</head>
-	<body onload="buffon = new Buffon();">
+	<body onload="buffon = new Buffon();" onresize="resizeCanvas()">
   		<canvas id="Canvas" width="700" height="700">This text is displayed if your browser does not support HTML5 Canvas.</canvas>
 	</body>
 </html>
