--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<title>Buffon's Needle</title>
-		<script src="index.js"></script>
-	</head>
-	<body onload="buffon = new Buffon();" onresize="resizeCanvas()">
-  		<canvas id="Canvas" width="700" height="700">This text is displayed if your browser does not support HTML5 Canvas.</canvas>
-	</body>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Buffon's Needle</title>
+        <script src="math.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <style>
+            html, body {
+                overflow: hidden;
+                width: 100%;
+                height: 100%;
+                padding: 0;
+                margin: 0;
+                font-family: sans-serif;
+                font-weight: bold;
+            }
+
+            #menu {
+                display: block;
+                top: 0;
+                left: 0;
+                padding: 1em;
+                margin: 0.75em;
+                border-radius: 0.75em;
+                background-color: #8491ac;
+                position: absolute;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            }
+
+            .menu-inputs {
+                border-radius: 0.75em;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+                padding: 1em;
+                background-color: #ccdfff;
+                border: none;
+                font-weight: bold;
+                font-size: 1em;
+            }
+
+            .menu-text {
+                display: block;
+                color: #ccdfff;
+                text-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
+                padding-top: 1em;
+                font-size: 1.5em;
+            }
+        </style>
+    </head>
+    <body onload="loadedPage();" onresize="resizeCanvas()">
+        <div id="menu">
+            <input class="menu-inputs" type="text" placeholder="Amount of needles to drop"></input>
+            <input class="menu-inputs" type="submit" value="Submit" onclick="submitForm();"></input>
+            <br>
+            <span class="menu-text">Total Needles: <span id="total-needles"></span></span>
+            <span class="menu-text">Crossing Needles: <span id="crossed-needles"></span></span>
+            <span class="menu-text">Result: <span id="results"></span></span>
+            <span class="menu-text">Percent Error: <span id="percent-error"></span>%</span>
+        </div>
+        <canvas id="canvas">This text is displayed if your browser does not support HTML5 Canvas.</canvas>
+        <script src="index.js"></script>
+    </body>
 </html>
